[package]
name = "oridion"
version = "4.0.0"
description = "Oridion Galaxy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oridion"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
solana-security-txt = "1.1.1"
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }